tests/build/cases/property/args_count_no_input.stderr
error: properties must have at least 2 parameters, `UiNode` and one or more values
 --> cases/property/args_count_no_input.rs:4:17
  |
4 | pub fn no_inputs(child: impl UiNode) -> impl UiNode {
  |                 ^^^^^^^^^^^^^^^^^^^^
